Metadata collection parsing finished

--- a/.gitignore
+++ b/.gitignore
@@ -4,4 +4,8 @@ __pycache__/
 .DS_Store
 youtube_venv
 *.log
+El sector se une en defensa del aceite de oliva-b4vPOoDtttE.mp4
+Probamos los collares de geolocalización de ganado de Digitanimal en Soria.mp4
+Reunión MARM-OPAs medidas de apoyo a la ganadería-OYS2pt9DVsY.mp4
 
+/prototyping/video_urls_FUll.csv
