Ignore DS_Store

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@ data_collection/data/videos
 Data_collection/data/videos_metadata_FULL.csv
 __pycache__/
 .ipynb_checkpoints
-.DS_Store
+**/.DS_Store
 youtube_venv
 *.log
 
