--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,9 @@
-data_collection/data/videos
-Data_collection/data/videos_metadata_FULL.csv
+data_collection/
+Data_collection/
 __pycache__/
 **/.ipynb_checkpoints
 **/.DS_Store
 youtube_venv
-*.log
 
 /prototyping/video_urls_FUll.csv
 /prototyping/Videos
