--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,9 @@
-<<<<<<< HEAD
-<<<<<<< HEAD
-data_collection/
-Data_collection/
-=======
-=======
->>>>>>> 0fde5179efab6f9960527e7f53f9395ee31a6d2b
-data_collection/data/videos
+data_collection/data
 Data_collection/data/videos_metadata_FULL.csv
-<<<<<<< HEAD
->>>>>>> 3b5a45a29a7eb2c066a881f55607264cdf7aa0e3
-=======
->>>>>>> 0fde5179efab6f9960527e7f53f9395ee31a6d2b
-__pycache__/
 **/.ipynb_checkpoints
 **/.DS_Store
 youtube_venv
 
-/prototyping/video_urls_FUll.csv
 /prototyping/Videos
-prototyping/videos_metadata_TEST.csv
-prototyping/OYS2pt9DVsY-136.mp4
 .DS_Store
 /prototyping/Videos_test
