--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,7 @@ youtube_venv
 /prototyping/Videos
 /prototyping/Videos_test
 /prototyping/logos/Images_logos
+
+Labelme2YOLO-main
+Google-Image-Scraper
+Trasfer_learning
